[gd_scene load_steps=11 format=3 uid="uid://clpvhlmgxhpo0"]

[ext_resource type="Script" path="res://scenes/blocks/button/button.gd" id="1_5x827"]
[ext_resource type="Texture2D" uid="uid://clagocj6solbd" path="res://assets/tiles/Button Animation.png" id="1_okab5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilca5"]
size = Vector2(16, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7ink"]
atlas = ExtResource("1_okab5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmedv"]
atlas = ExtResource("1_okab5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dntj"]
atlas = ExtResource("1_okab5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shyx1"]
atlas = ExtResource("1_okab5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqdxl"]
atlas = ExtResource("1_okab5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d51eu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7ink")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmedv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dntj")
}],
"loop": false,
"name": &"press_down",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shyx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqdxl")
}],
"loop": false,
"name": &"press_up",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpoyp"]
size = Vector2(8, 8)

[node name="Button" type="Node2D"]
script = ExtResource("1_5x827")

[node name="ButtonBody" type="StaticBody2D" parent="."]
position = Vector2(-1, 0)

[node name="ButtonCollision" type="CollisionShape2D" parent="ButtonBody"]
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_ilca5")

[node name="ButtonSprite" type="AnimatedSprite2D" parent="ButtonBody"]
position = Vector2(1, -8)
sprite_frames = SubResource("SpriteFrames_d51eu")
animation = &"idle"

[node name="ButtonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_fpoyp")

[connection signal="body_entered" from="ButtonArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ButtonArea" to="." method="_on_button_area_body_exited"]
